[package]
name = "abdominal_muscle_roller_meter"
version = "0.1.0"
authors = ["yu2ta7ka <yuji.tanaak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "0.1.2"
cortex-m = "0.6"
cortex-m-rt = "0.6"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2"
st7735-lcd = "0.7.2"
embedded-graphics = "0.6.2"
vl53l0x = "*"
heapless = "0.7.9"

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f411"] # replace the model of your microcontroller here